--- a/lego/views/profile.pug
+++ b/lego/views/profile.pug
@@ -9,7 +9,12 @@ html
    header.header
          h1 #{title}
    div.profile
-     div.profile-image(style=`background: url('/images/${building.imgSrc}') top center no-repeat; background-size: cover;`)
+     img.profile-image(src=`/images/${building.imgSrc}`)
+   div  
+     img.profile-image(src=`/images/${building.imgSrc1}`)
+   div  
+     img.profile-image(src=`/images/${building.imgSrc2}`)
+   
      div.profile-details
        h1.profile-name
          | #{building.name} #{building.legobuilding}
